# copyless

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: boxed.rs  lib.rs  vec.rs
